   pass.  This ensurse the output files are seen when spinning the tree
   into the output directory.

 - Ensure docknot dist always regenerates the *.tar.xz file if necessary,
   rather than reusing one left over from a previous build of the same
   version.

 - Always recreate GnuPG signatures when generating distribution tarballs
   in docknot dist.

6.01 - 2022-01-15

 - Add new docknot release command and corresponding App::DocKnot::Release
   module to copy a tarball releaes (normally created by docknot dist)
   into a release area, update symlinks, archive any previous releases,
   and update the .versions file used by docknot spin.  DocKnot now
   depends on Sort::Versions.

 - Add new docknot update-spin command and corresponding update_spin
   method in App::DocKnot::Update to update a spin input tree to the
   latest expectations.  Currently, all this does is convert *.rpod
   pointer files to *.spin pointer files.

 - docknot spin now uses Path::Iterator::Rule and Path::Tiny to construct
   its paths, which eliminates the need to change the working directory
   while processing input files.

 - Fix spurious requirement for a package metadata file when running
   docknot spin.

 - Don't overwrite output files from docknot generate or generate-all
   if the generation fails.

 - Require Pod::Thread 3.01 or later.

6.00 - 2021-12-25

 - Add a new *.spin input file for docknot spin that points to an external
   file with instructions for how to convert it to HTML.  Via this
   mechanism, support formatting Markdown files as HTML via docknot spin.
   This support requires the pandoc program be installed.  The path to
   pandoc may be specified in the DocKnot global configuration file.

 - Support *.spin pointers in addition to *.rpod pointers for external POD
   files.  The command-line flags used in *.rpod pointers are replaced by
   the title and options key of the *.spin file.  *.rpod files are